# SENSOR-FUSION

./: README.md
sensor_fusion/: CMakeLists.txt  commands  package.xml  readme
sensor_fusion/kalman_filter/include/: KalmanFilter.hpp
sensor_fusion/kalman_filter/src/: main.cpp
sensor_fusion/launch/: sf_world.launch
sensor_fusion/model_states/: boxes.py
sensor_fusion/models/animated_box_x/: model.sdf
sensor_fusion/models/box/: model.sdf
sensor_fusion/python_sim/: algorithms.py  config.py  main.py  path.txt  walls.py
sensor_fusion/ros_sim/: nav_to_goal.py  navigate.py
sensor_fusion/simulation/: sf.world
turtlebot/: CMakeLists.txt  README.md  package.xml
turtlebot/turtlebot3_gazebo/models/simulation_model/: model.config  model.sdf
turtlebot/turtlebot3_navigation/: dwa_local_planner_params.yaml
turtlebot/turtlebot3_navigation/launch/: amcl_demo.launch
turtlebot/turtlebot3_navigation/launch/includes/: move_base.launch.xml  safety_controller.launch.xml  velocity_smoother.launch.xml
turtlebot/turtlebot3_navigation/maps/: sim_map.pgm  sim_map.yaml
turtlebot/turtlebot3_sensorFusion/src/kalman_filter/include/: ROSLogistics.hpp
turtlebot/turtlebot3_sensorFusion/src/kalman_filter/src/: KalmanFilter.cpp  ROSLogistics.cpp
turtlebot/turtlebot3_simulations/turtlebot3_gazebo/: CMakeLists.txt  package.xml
turtlebot/turtlebot3_simulations/turtlebot3_gazebo/launch/: sf_world.launch  simulation_world (copy).launch
turtlebot/turtlebot3_simulations/turtlebot3_gazebo/models/animated_box_x/: model.config  model.sdf
turtlebot/turtlebot3_simulations/turtlebot3_gazebo/models/animated_box_y/: model.config  model.sdf
turtlebot/turtlebot3_simulations/turtlebot3_gazebo/models/box/: model.sdf
turtlebot/turtlebot3_simulations/turtlebot3_gazebo/models/sf_model/: model.config  model.sdf
turtlebot/turtlebot3_simulations/turtlebot3_gazebo/src/: ActorCollisionsPlugin.cc  AttachModelPlugin.cc  CollisionActorPlugin.cc
turtlebot/turtlebot3_simulations/turtlebot3_gazebo/worlds/: sf.world  simulation.world
turtlebot/turtlebot3_slam/rviz/: turtlebot3_gmapping.rviz
